<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".SignActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="125dp" app:srcCompat="@drawable/applogo"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.01999998"/>
    <TextView
            android:text="@string/signIn"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintVertical_bias="0.00999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ScrollView

            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout3">
            <TextView
                    android:text="@string/baslık1"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:hint="@string/hint1"
                    android:id="@+id/editTextUserName" android:minHeight="48dp"
            />
            <TextView
                    android:text="@string/baslık3"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint3"
                    android:id="@+id/editTextUserGmail" android:minHeight="48dp"
            />
            <TextView
                    android:text="@string/baslık2"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/hint2"
                    android:id="@+id/editTextUserPassword" android:minHeight="48dp"
            />
            <Button
                    android:id="@+id/signButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="20sp"

                    tools:ignore="HardcodedText,MissingConstraints"
            />
            <Button
                    android:text="@string/baslik38"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="20sp"
                    android:textColor="#536DFE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/changeLoginButton"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>