<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AyarlarFragment">


    <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/ust_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:id="@+id/linearLayout5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:src="@drawable/arrow_back_ios_48px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backImage"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/baslik12"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout6">
        <ImageView
                android:src="@drawable/account_circle_48px"
                android:layout_width="68dp"
                android:layout_height="74dp" android:id="@+id/imageView9" android:layout_weight="1"/>
        <TextView
                android:text="@string/user_name"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView26" android:layout_weight="2"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/rounde_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/baslik13"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView27"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <ImageButton
                            android:src="@drawable/account_circle_48px"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            :id="@+id/imageButton"
                            android:layout_weight="1" tools:ignore="SpeakableTextPresentCheck"/>
                    <ImageButton
                            android:src="@drawable/account_circle_48px"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:id="@+id/imageButton2"
                            android:layout_weight="1" tools:ignore="SpeakableTextPresentCheck"/>
                    <ImageButton
                            android:src="@drawable/account_circle_48px"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/imageButton3"
                            android:layout_weight="1" tools:ignore="SpeakableTextPresentCheck"/>
                    <ImageButton
                            android:src="@drawable/account_circle_48px"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/imageButton4"
                            android:layout_weight="1" tools:ignore="SpeakableTextPresentCheck"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/rounde_bg"
                    android:layout_marginTop="10dp"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/baslik14"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView28"/>
                <Button
                        android:text="@string/baslik15"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/green_button_bg"
                        android:layout_height="wrap_content" android:id="@+id/changePasswordButton"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/rounde_bg"
                    android:layout_marginTop="10dp"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/baslik16"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins_light"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView29"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Button
                            android:text="@string/dil1"
                            android:layout_margin="5dp"
                            android:background="@drawable/green_button_bg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/dilTurkceButton"/>
                    <Button
                            android:text="@string/dil2"
                            android:layout_margin="5dp"
                            android:background="@drawable/green_button_bg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/dilingilizceButton"/>
                    <Button
                            android:text="@string/dil3"
                            android:layout_margin="5dp"
                            android:background="@drawable/green_button_bg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/dilAlmancaButton"/>
                    <Button
                            android:text="@string/dil4"
                            android:layout_margin="5dp"
                            android:background="@drawable/green_button_bg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/dilFransızcaButton"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/rounde_bg"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/baslik17"
                        android:fontFamily="@font/poppins_light"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView30"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/hint10"
                        android:ems="10"
                        android:textColorHint="@color/black"
                        android:id="@+id/adresEditText"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/hint7"
                            android:textColorHint="@color/black"
                            android:ems="10"
                            android:layout_weight="1"
                            android:id="@+id/ilEditText"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/hint8"
                            android:layout_weight="1"
                            android:textColorHint="@color/black"
                            android:ems="10"
                            android:id="@+id/İlceEditText"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/hint9"
                            android:textColorHint="@color/black"
                            android:ems="10"
                            android:id="@+id/mahalleEditText"
                            android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/baslik18"
                        android:layout_margin="10dp"
                        android:background="@drawable/green_button_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/iptalButton" android:layout_weight="1"/>
                <Button
                        android:text="@string/baslik19"
                        android:layout_margin="10dp"
                        android:background="@drawable/green_button_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/kaydetButton" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>