<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ParaYukleFragment">


    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"

            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout9">
        <ImageView
                android:src="@drawable/arrow_back_ios_48px"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageView24"/>
        <TextView
                android:text="@string/baslik22"

                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                android:gravity="start"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView35"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/baslik24"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="24sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView36"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/TLisareti"
                            android:textSize="32sp"
                            android:gravity="end"
                            android:fontFamily="@font/poppins_bold"
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView33" android:layout_weight="1"/>
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberPassword"
                            android:hint="@string/baslik25"
                            android:textColorHint="@color/black"
                            android:fontFamily="@font/poppins_bold"
                            android:layout_margin="10dp"
                            android:ems="10"
                            android:id="@+id/paraMiktarTextBox" android:layout_weight="3"/>

                </LinearLayout>
            </LinearLayout>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPersonName"
                    android:hint="@string/kart1"
                    android:fontFamily="@font/poppins_light"
                    android:id="@+id/kartNoTextBox"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPersonName"
                    android:hint="@string/kart2"
                    android:fontFamily="@font/poppins_light"
                    android:id="@+id/CVCTextBox"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:hint="@string/kart3"
                    android:fontFamily="@font/poppins_light"
                    android:id="@+id/deadLineTextBox"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPersonName"
                    android:hint="@string/kart4"
                    android:fontFamily="@font/poppins_light"
                    android:id="@+id/kodTextBox"/>
            <Button
                    android:text="@string/kart5"
                    android:background="@drawable/green_button_bg"

                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/paraYukleButton"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>